# todo-list

todo-back/: .env.example  main.py  pyproject.toml
todo-back/app/: __init__.py  config.py  database.py  dependencies.py  endpoints.py  errors.py  models.py  schemas.py  utils.py
todo-front/: package-lock.json  package.json
todo-front/src/: App.tsx  config.ts
todo-front/src/components/: AdminLogin.tsx  CreateTaskForm.tsx  EditableTask.tsx  ErrorMessage.tsx  InfoMessage.tsx  LoadingButton.tsx  LoadingSpinner.tsx  SuccessMessage.tsx  TaskCard.tsx  TaskList.tsx  index.ts
todo-front/src/contexts/: AuthContext.tsx  TaskContext.tsx  UIContext.tsx  index.ts
todo-front/src/errors/: ApiError.ts  AuthError.ts  NetworkError.ts  NotFoundError.ts  ValidationError.ts  index.ts
todo-front/src/hooks/: index.ts  useError.ts  useForm.ts  useLoading.ts  useSuccess.ts
todo-front/src/services/: ApiService.ts  index.ts
todo-front/src/types/: index.ts
